# otter

./: .gitignore  README.md  build.sh  install.py  install.sh  pyproject.toml  run.py  start.py
.github/workflows/: release.yml
app/: app.py
otter/: __main__.py  app.py  cli.py  config.py  models.py  serializers.py  services.py
otter/clients/: llama_parse_client.py
otter/templates/: base.html  index.html
tests/: conftest.py  test_gradebook.py  test_gradebook_formatter.py
tests/fixtures/: mock-gradebook-parsed.json  mock-gradebook.xlsx
tests/test_clients/: test_llama_parse_client.py
