[project]
name = "otter"
version = "0.1.0"
description = "Gradebook managaer for DLI"
authors = [
    {name = "Tom Waterman",email = "tjwaterman99@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "llama-index-core (>=0.12.11,<0.13.0)",
    "llama-parse (>=0.5.19,<0.6.0)",
    "llama-index-readers-file (>=0.4.3,<0.5.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

