[project]
name = "otter"
version = "0.1.0"
description = "Gradebook managaer for DLI"
authors = [
    {name = "Tom Waterman",email = "tjwaterman99@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = "<3.14,>=3.9"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.30.0,<0.35.0)",
    "click (>=8.1.8,<9.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "llama-index (>=0.12.12,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[project.scripts]
otter = 'otter.cli:cli'
